--- a/public/css/public.css
+++ b/public/css/public.css
@@ -4,7 +4,7 @@
  * @link              https://github.com/demispatti/cb-parallax
  * @since             0.1.0
  * @package           cb-parallax
- * @subpackage        cb-parallax/admin/css
+ * @subpackage        cb-parallax/public/css
  * Author:            Demis Patti <demis@demispatti.ch>
  * Author URI:        http://demispatti.ch
  * License:           GPL-2.0+
@@ -13,36 +13,46 @@
 
 html,
 body,
-#cbp_overlay,
-#cbp_image_container {
-    display: block;
-    box-sizing: border-box;
-    margin: 0 auto;
-    padding: 0;
+#cb_parallax_overlay,
+#cb_parallax_image_container
+{
+	display: block;
+	box-sizing: border-box;
+	margin: 0 auto;
+	padding: 0;
 }
 
 html,
-body,
-#cbp_overlay {
-    background: transparent;
+body
+{
+	background: transparent;
 }
 
-#cbp_overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border: none;
-    z-index: -1;
-    background: repeat;
+#cb_parallax_overlay
+{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	border: none;
+	z-index: -1;
+	background: repeat;
 }
 
-#cbp_image_container {
-    position: fixed;
-    background: no-repeat fixed;
-    overflow: hidden;
-    z-index: -2;
+#cb_parallax_image_container
+{
+	position: fixed;
+	background: no-repeat fixed;
+	overflow: hidden;
+	z-index: -2;
+}
+
+/* quick-fix */
+body.admin-bar:not(.custom-background-image)::before,
+body:not(.custom-background-image)::before, body:not(.custom-background-image)::after
+{
+	height: 0;
 }
