--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -103,9 +103,6 @@ div.fancy-select .cb-parallax-fancy-select .cb-parallax-fancy-select ul.options.
 	visibility: visible;
 	top: 50px;
 	opacity: 1;
-
-	/* have to use a non-visibility transition to prevent this iOS issue (bug?): */
-	/*http://stackoverflow.com/questions/10736478/css-animation-visibility-visible-works-on-chrome-and-safari-but-not-on-ios*/
 	transition: opacity 300ms ease-out, top 300ms ease-out;
 	-webkit-transition: opacity 300ms ease-out, top 300ms ease-out;
 	-moz-transition: opacity 300ms ease-out, top 300ms ease-out;
@@ -302,8 +299,6 @@ div.fancy-select ul.options.open
 	visibility: visible;
 	top: 30px;
 	opacity: 1;
-	/* have to use a non-visibility transition to prevent this iOS issue (bug?): */
-	/*http://stackoverflow.com/questions/10736478/css-animation-visibility-visible-works-on-chrome-and-safari-but-not-on-ios*/
 	transition: opacity 300ms ease-out, top 300ms ease-out;
 	-webkit-transition: opacity 300ms ease-out, top 300ms ease-out;
 	-moz-transition: opacity 300ms ease-out, top 300ms ease-out;
@@ -483,7 +478,7 @@ div.fancy-select ul.options li.hover
 
 .cb-parallax-switch-input:checked ~ .cb-parallax-switch-label
 {
-	background: #47a8d8;
+	background: #87d37c;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);
 }
 
@@ -579,26 +574,78 @@ div.fancy-select ul.options li.hover
 	display: inline-block;
 }
 
-#cb-parallax-meta-box .cb-parallax-media-url {
+.cb-parallax-media-url {
 	display: block;
 	background: url('/wp-content/plugins/cb-parallax/admin/images/placeholder-small.jpg');
-	width: 254px;
-	height: 159px;
+	min-width: 254px;
+	min-height: 40px;
+	height: auto;
 	z-index: 10;
-	margin-bottom: 12px !important;
+	margin-bottom: 0;
 }
 
-#cb-parallax-meta-box .cb-parallax-media-url:hover
+#cb_parallax_background_image_url {
+	width: inherit;
+	object-fit: fill !important;
+	position: relative;
+	margin: 0 auto;
+}
+
+.cb-parallax-image-container-empty:hover {
+	cursor: pointer !important;
+}
+
+.cb-parallax-image-container-in-use {
+	cursor: default !important;
+}
+
+.cb-parallax-media-url:hover
 {
 	cursor: hand;
 }
 
-.cb-parallax-media-buttons-container {
-	text-align: center;
+.cb-parallax-remove-media-button-container {
+	display: block;
+	height: 0;
+	text-align: right;
+	width: 100%;
+}
+
+.cb-parallax-remove-media {
+	position: relative;
+	right: 6px;
+	top: 8px;
+	color: rgb(170, 0, 0);
+	font-size: 16px;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background-color: rgba(255, 255, 255, 0.82);
+}
+
+.cb-parallax-remove-media:hover {
+	visibility: visible !important;
+	color: rgb(220, 0, 0);
+}
+
+.cb-parallax-remove-media i {
+	width: 20px;
+	height: 20px;
+}
+
+.cb-parallax-remove-media i:before {
+	position: relative;
+	right: 4px;
+	top: -2px;
+
+	width: 20px;
+	height: 20px;
 }
 
 #cb_parallax_parallax_enabled_container {
-	text-align: center;
+	margin-top: 2px;
+	padding-top: 4px;
+	text-align: left;
 }
 
 #cb_parallax_parallax_enabled_container > div {
@@ -607,5 +654,6 @@ div.fancy-select ul.options li.hover
 
 .image-bg {
 	background-color: #f9f9f9;
-	padding-bottom: 24px;
+	padding-top: 0;
+	padding-bottom: 0;
 }
