--- a/public/css/public.css
+++ b/public/css/public.css
@@ -10,49 +10,56 @@
  * License:           GPL-2.0+
  * License URI:       http://www.gnu.org/licenses/gpl-2.0.txt
  */
-
 html,
 body,
-#cb_parallax_overlay,
-#cb_parallax_canvas
-{
-	display: block;
-	box-sizing: border-box;
-	margin: 0 auto;
-	padding: 0;
+#cb_parallax_overlay {
+  display: block;
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
-html,
-body
-{
-	background: transparent;
+body.no-nicescroll {
+  background: transparent;
+  overflow-x: auto;
+  overflow-y: scroll;
 }
 
-#cb_parallax_overlay
-{
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	border: none;
-	z-index: -1;
-	background: repeat;
+body.has-nicescroll {
+  background: transparent;
+  overflow-x: auto;
+  overflow-y: auto;
+  cursor: default !important;
 }
 
-#cb_parallax_canvas
-{
-	position: fixed;
-	background: no-repeat fixed;
-	overflow: hidden;
-	z-index: -2;
+#cb_parallax_overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border: none;
+  z-index: -1;
+  background: repeat;
+}
+
+#cb_parallax_canvas {
+  position: fixed;
+  background: no-repeat fixed;
+  overflow: hidden;
+  z-index: -2;
 }
 
 /* quick-fix */
 body.admin-bar:not(.custom-background-image)::before,
-body:not(.custom-background-image)::before, body:not(.custom-background-image)::after
-{
-	height: 0;
+body:not(.custom-background-image)::before, body:not(.custom-background-image)::after {
+  height: 0;
 }
