Updated URI & email address

--- a/admin/css/metabox-display.css
+++ b/admin/css/metabox-display.css
@@ -177,8 +177,8 @@
  * @since             0.1.0
  * @package           cb-parallax
  * @subpackage        cb-parallax/admin/menu/css
- * Modifier:          Demis Patti <demis@demispatti.ch>
- * Author URI:        http://demispatti.ch
+ * Modifier:          Demis Patti <demispatti@gmail.com>
+ * Author URI:
  * License:           GPL-2.0+
  * License URI:       http://www.gnu.org/licenses/gpl-2.0.txt
  */
