--- a/public/css/public.css
+++ b/public/css/public.css
@@ -5,8 +5,8 @@
  * @since             0.1.0
  * @package           cb-parallax
  * @subpackage        cb-parallax/public/css
- * Author:            Demis Patti <demispatti@gmail.com>
- * Author URI:
+ * Author:            Demis Patti <demis@demispatti.ch>
+ * Author URI:        http://demispatti.ch
  * License:           GPL-2.0+
  * License URI:       http://www.gnu.org/licenses/gpl-2.0.txt
  */
