--- a/public/css/public.css
+++ b/public/css/public.css
@@ -10,15 +10,19 @@
  * License:           GPL-2.0+
  * License URI:       http://www.gnu.org/licenses/gpl-2.0.txt
  */
-body {
+html,
+body,
+#cb_parallax_overlay,
+#cb_parallax_canvas {
   display: block;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow-x: auto;
-  overflow-y: auto;
+}
+
+html,
+body {
+  background: transparent;
 }
 
 #cb_parallax_overlay {
