--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -158,7 +158,7 @@ div.fancy-select .cb-parallax-fancy-select .cb-parallax-fancy-select ul.options 
 .label-for-cb-parallax-switch {
   display: inline-block;
   margin-top: 3px;
-  margin-right: 12px;
+  margin-right: 0;
 }
 
 /* Fancy Select. */
@@ -513,7 +513,7 @@ div.fancy-select ul.options li.hover {
 .cb-parallax-media-url {
   display: block;
   background: url("/wp-content/plugins/cb-parallax/src/admin/images/placeholder-small.jpg");
-  min-width: 254px;
+  width: 100%;
   min-height: 40px;
   height: auto;
   z-index: 10;
