--- a/admin/css/metabox-display.css
+++ b/admin/css/metabox-display.css
@@ -345,29 +345,28 @@
   background: #4fb845;
 }
 
-#cb_parallax_settings_form {
-  box-sizing: border-box;
-  width: 100%;
+/*#cb_parallax_settings_form {
+    box-sizing: border-box;
+    width: 100%;
 }
 
 #cb_parallax_settings_form .fancy-select {
-  box-sizing: border-box;
-  width: 100%;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 #cb_parallax_settings_form .fancy-select select {
-  box-sizing: border-box;
-  width: 100%;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 #cb_parallax_settings_form .fancy-select select:focus + div.trigger {
-  box-shadow: 0 0 0 2px #4b5468;
+    box-shadow: 0 0 0 2px #4b5468;
 }
 
 #cb_parallax_settings_form .fancy-select select:focus + div.trigger.open {
-  box-shadow: none;
-}
-
+    box-shadow: none;
+}*/
 #cb_parallax_settings_form .fancy-select div.trigger {
   box-sizing: border-box;
   border-radius: 4px;
@@ -382,15 +381,15 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100%;
+  max-height: 40px;
   transition: all 0.1s ease-out;
 }
 
-#cb_parallax_settings_form .fancy-select div.trigger:after {
-  content: "";
-  border: 5px solid transparent;
-  border-top-color: #F1F1F1;
-}
-
+/*#cb_parallax_settings_form .fancy-select div.trigger:after {
+    content: "";
+    border: 5px solid transparent;
+    border-top-color: #F1F1F1;
+}*/
 #cb_parallax_settings_form .fancy-select div.trigger.open {
   background: #F1F1F1;
   border: 1px solid #F1F1F1;
@@ -398,10 +397,9 @@
   box-shadow: none;
 }
 
-#cb_parallax_settings_form .fancy-select div.trigger.open:after {
-  border-top-color: #F1F1F1;
-}
-
+/*#cb_parallax_settings_form .fancy-select div.trigger.open:after {
+    border-top-color: #F1F1F1;
+}*/
 #cb_parallax_settings_form .fancy-select ul.options {
   width: 102%;
   border-top-color: #F1F1F1;
@@ -589,7 +587,7 @@
 
 .cb_parallax_background_image {
   width: 100%;
-  max-width: 254px;
+  width: 100%;
   height: auto;
   overflow-y: visible;
   z-index: 11;
@@ -608,7 +606,7 @@
 
 .cb-parallax-media-url {
   display: block;
-  width: 254px;
+  width: 100%;
   height: 159px;
   z-index: 10;
   margin-bottom: 0;
@@ -631,7 +629,7 @@
 }
 
 .cb-parallax-image-container-empty {
-  width: 254px;
+  width: 100%;
   height: 159px;
 }
 
@@ -643,42 +641,51 @@
   cursor: default !important;
 }
 
-.cb-parallax-remove-media-button-container {
-  display: block;
+#cb_parallax_settings_form .cb-parallax-remove-media-button-container {
+  display: inline-block;
   height: 0;
+  line-height: 0;
+  font-size: 0;
   text-align: right;
   width: 100%;
 }
-
-.cb-parallax-remove-media-button-container + div {
+#cb_parallax_settings_form .cb-parallax-remove-media-button-container + div {
   height: auto;
   max-height: unset;
   overflow: hidden;
 }
-
-.cb-parallax-remove-media {
+#cb_parallax_settings_form .cb-parallax-remove-media {
+  display: inline-block;
+  box-sizing: border-box;
   position: relative;
   right: 6px;
-  top: 8px;
-  font-size: 16px;
-  width: 20px;
-  height: 20px;
+  top: 12px;
+  width: 32px;
+  height: 32px;
+  margin-right: 0;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.82);
   text-decoration: none;
+  margin-left: 0 !important;
 }
-
-.cb-parallax-remove-media i {
-  width: 20px;
-  height: 20px;
-}
-
-.cb-parallax-remove-media i:before {
+#cb_parallax_settings_form .cb-parallax-remove-media i {
+  display: inline-block;
+  box-sizing: border-box;
   position: relative;
   right: 0;
   top: 0;
-  width: 20px;
-  height: 20px;
+  width: 32px;
+  height: 32px;
+}
+#cb_parallax_settings_form .cb-parallax-remove-media i:before {
+  font-size: 32px;
+  display: block;
+  box-sizing: border-box;
+  position: relative;
+  right: 0;
+  top: 0;
+  width: 32px;
+  height: 32px;
 }
 
 .cb-parallax-parallax-enabled-container {
@@ -693,7 +700,7 @@
 .label-for-cb-parallax-switch {
   display: inline-block;
   margin-top: 3px;
-  margin-right: 12px;
+  margin-right: 0;
 }
 
 /* option container */
@@ -716,7 +723,27 @@
 }
 
 #cb-parallax-meta-box div#cb_parallax_settings_form {
+  display: block;
+  box-sizing: border-box;
   padding: 0 0 0 0;
   margin: 0 0 0 0;
   box-shadow: none;
+}
+
+.cb-parallax-settings-page #poststuff #cb-parallax-meta-box > .inside {
+  display: block;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.cb-parallax-settings-page #poststuff #cb-parallax-meta-box > .inside #cb_parallax_settings_form {
+  display: block;
+  box-sizing: border-box;
+  margin: 0 0 0 -6px;
+}
+
+#wpbody-content span.color-alpha {
+  display: block;
+  box-sizing: border-box;
+  height: 100% !important;
+  width: 100%;
 }
