--- a/admin/menu/css/menu.css
+++ b/admin/menu/css/menu.css
@@ -51,6 +51,7 @@ div.fancy-select .cb-parallax-fancy-select .cb-parallax-fancy-select div.trigger
   border-top-color: #4b5468;
   top: 20px;
   right: 9px;
+  color: green !important;
 }
 
 div.fancy-select .cb-parallax-fancy-select .cb-parallax-fancy-select div.trigger.open {
@@ -158,7 +159,7 @@ div.fancy-select .cb-parallax-fancy-select .cb-parallax-fancy-select ul.options 
 .label-for-cb-parallax-switch {
   display: inline-block;
   margin-top: 3px;
-  margin-right: 12px;
+  margin-right: 0;
 }
 
 /* Fancy Select. */
@@ -652,9 +653,11 @@ div.fancy-select ul.options li.hover {
 }
 
 .cb-parallax-remove-media {
+  box-sizing: border-box;
+  display: block;
   position: relative;
-  right: 6px;
-  top: 8px;
+  margin-right: 6px;
+  margin-top: 8px;
   font-size: 16px;
   width: 20px;
   height: 20px;
@@ -664,6 +667,8 @@ div.fancy-select ul.options li.hover {
 }
 
 .cb-parallax-remove-media i {
+  box-sizing: border-box;
+  display: block;
   width: 20px;
   height: 20px;
 }
